--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "passport-steam": "^1.0.8",
     "shortid": "^2.2.4",
     "socket.io": "^1.7.2",
+    "socketio-jwt": "^4.5.0",
+    "steam-user-inventory": "^4.1.0",
     "util": "^0.10.3"
   },
   "engine": {
